--- a/style.css
+++ b/style.css
@@ -518,7 +518,7 @@
 
 .seccion__four .seccion__text-top{
     width: 100%;
-    height: 25%;
+    height: 30%;
     background-color: var(--azul);
     display: flex;
     flex-flow: row wrap;
@@ -551,8 +551,9 @@
     border-radius: 5px;
     text-decoration: none;
     color:var(--blanco);
-    padding: 20px 65px;
     font-size: 1.2rem;
+    text-align: center;
+    line-height: 80px;
 }
 @keyframes rotacion {
     100%{
@@ -560,6 +561,87 @@
     }
 }
 
+.seccion__four .seccion__carrusel{
+    width: 100%;
+    height: 70%;
+    overflow: hidden;
+    position: relative;
+    bottom: 10%;
+}
+
+.seccion__four .seccion__carrusel .seccion__images{
+    width:196vw;
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+}
+
+.seccion__four .seccion__carrusel .seccion__images .seccion__images-img{
+    width: 11%;
+    height: 100%;
+    background:url(./img/small-project-1.jpg);
+    background-size: cover;
+    border-radius: 10px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: end;
+    overflow: hidden;
+    position: relative;
+}
+
+.seccion__four .seccion__carrusel .seccion__images .seccion__images-img .seccion__images-info{
+    background-color: var(--azul);
+    width: 100%;
+    height: 50%;
+    position: relative;
+    color:var(--blanco);
+    top: 23%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: start;
+    align-items: center;
+    transition: top .5s;
+}
+
+.seccion__four .seccion__carrusel .seccion__images .seccion__images-img:hover .seccion__images-info{
+    top:0%
+}
+
+.seccion__four .seccion__carrusel .seccion__images .seccion__images-img .seccion__images-info .seccion__images-icon{
+    font-size: 3.5rem;
+   
+}
+
+.seccion__four .seccion__carrusel .seccion__images .seccion__images-img .seccion__images-info .seccion__images-h4{
+    font-size: 1.7rem;
+}
+
+.seccion__four .seccion__carrusel .seccion__images .seccion__images-img .seccion__images-info .seccion__images-button{
+    width: 60%;
+    height: 30%;
+    border: solid 4px #fff;
+    border-radius: 5px;
+    display: block;
+    margin-top: 20px;
+    text-decoration: none;
+    text-align: center;
+    line-height: 70px;
+    color:var(--blanco);
+}
+
+.seccion__four .seccion__carrusel .seccion__images .seccion__images-img .seccion__images-info .seccion__images-button .seccion__images-arrow{
+    padding-left: 5px;
+}
+
+.seccion__four .seccion__carrusel .seccion__images .seccion__images-img .seccion__images-info::before{
+    content: "";
+    position:absolute;
+    width: 100%;
+    height: 8%;
+    background-color: #0382b4a7;
+    bottom: 100%;
+}
 
 @media screen and (max-width:360px){
     .header{
