--- a/style.css
+++ b/style.css
@@ -473,8 +473,8 @@
 
 .seccion__three .seccion__part-2 .seccion__part-2-cards .seccion__part-2-card .seccion__part-2-card-text{
     text-align: center;
-    padding: 0px 30px;
     font-size: 1.2rem;
+    width: 80%;
     position: relative;
     z-index: 2;
 }
@@ -488,9 +488,9 @@
     text-decoration: none;
     color:var(--blanco);
     font-size: 1.3rem;
-    padding-top: 20px;
-    padding-left: 50px;
     position: relative;
+    text-align: center;
+    line-height: 65px;
     z-index: 2;
 }
 
@@ -506,9 +506,20 @@
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     background-color: var(--azul);
-    padding: 25px 45px;
     text-decoration: none;
+    text-align: center;
+    line-height: 70px;
     color:var(--blanco);
+    position: relative;
+    transition: background-color .5s;
+}
+
+.seccion__three .seccion__part-2 .seccion__part-2-buttons .seccion__part-2-button-link .seccion__part-2-button-link-i{
+    margin-left: 5px;
+}
+
+.seccion__three .seccion__part-2 .seccion__part-2-buttons .seccion__part-2-button-link:hover{
+    background-color: #144a5ffe;
 }
 
 .seccion__four{
@@ -642,6 +653,162 @@
     background-color: #0382b4a7;
     bottom: 100%;
 }
+
+.seccion__five{
+    width: 100%;
+    height: 85vh;
+    background:var(--azul);
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 75%;
+    row-gap: 10px;
+
+}
+.seccion__five .seccion__five-title{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color:var(--blanco);
+}
+
+.seccion__five .seccion__five-title .seccion__five-h2{
+    font-size: 2.5rem;
+    margin-top: 20px;
+}
+
+.seccion__five .seccion__five-title .seccion__five-subtitle{
+    font-size: 1.2rem;
+}
+
+.seccion__five .seccion__five-body{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+}
+
+.seccion__five .seccion__five-body .seccion__five-cards{
+    width: 20%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 70% 15% 10%;
+    justify-items: center;
+}
+
+.seccion__five .seccion__five-body .seccion__five-cards .seccion__five-cards-img{
+    width: 100%;
+    height: 90%;
+    border-radius: 50%;
+}
+.seccion__five .seccion__five-body .seccion__five-cards .seccion__five-cards-text{
+    width: 100%;
+    height: 100%;
+    color: var(--blanco);
+    text-align: center;
+}
+.seccion__five .seccion__five-body .seccion__five-cards .seccion__five-cards-text .seccion__five-cards-h2{
+    font-size: 1.6rem;
+}
+
+.seccion__five .seccion__five-body .seccion__five-cards .seccion__five-cards-socials{
+    display: flex;
+    width: 60%;
+    height: 100%;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    font-size: 1.2rem;
+  
+}
+
+.seccion__five .seccion__five-body .seccion__five-cards .seccion__five-cards-socials .seccion__five-cards-social{
+    text-decoration: none;
+    color: var(--blanco);
+}
+
+.seccion__six{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 40% 25%;
+    height: 80vh;
+    width: 100%;
+    row-gap: 10px;
+    margin-top: 20px;
+}
+
+.seccion__six .seccion__six-top{
+    text-align: center;
+}
+
+.seccion__six .seccion__six-top .seccion__six-h2{
+    font-size: 2.5rem;
+}
+
+.seccion__six .seccion__six-top .seccion__six-subtitle{
+    color:#3e3e3e;
+}
+
+.seccion__six .seccion__six-middle{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+}
+
+.seccion__six .seccion__six-middle .seccion__six-middle-card{
+    width: 20%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content:center;
+}
+
+.seccion__six .seccion__six-middle .seccion__six-middle-card .seccion__six-middle-card-h4{
+    font-size: 2.8rem;
+    color: var(--azul);
+    width: 100%;
+    height: 25%;
+}
+
+.seccion__six .seccion__six-middle .seccion__six-middle-card .seccion__six-middle-card-p{
+    font-size: 1.7rem;
+    width: 100%;
+    height: 20%;
+    margin-top: 10px;
+}
+
+.seccion__six .seccion__six-middle .seccion__six-middle-card .seccion__six-middle-card-text{
+    font-size: 1.2rem;
+    width: 80%;
+    height: 30%;
+    color:#3e3e3e;
+}
+
+.seccion__six .seccion__six-botton{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.seccion__six .seccion__six-botton .seccion__six-botton-img{
+    width: 10%;
+    height: 90%;
+    filter: grayscale(100);
+    transition: all .5s;
+}
+
+.seccion__six .seccion__six-botton .seccion__six-botton-img:hover{
+    filter: grayscale(0);
+    margin-bottom: 10px;
+}
+
 
 @media screen and (max-width:360px){
     .header{
